testoldcopy/force-app/main/default/objects/QBO_Invoice__c/QBO_Invoice__c.object-meta.xml
<CustomObject>
    <label>QBO Invoice</label>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QBO Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>