testoldcopy/force-app/main/default/objects/QBO_Invoice__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>QBO Invoices</relationshipLabel>
    <relationshipName>QBO_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>