testoldcopy/force-app/main/default/objects/QBO_Invoice__c/fields/QBO_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>QBO_Billing_Address__c</fullName>
    <label>Billing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>