testoldcopy/force-app/main/default/objects/QBO_Invoice__c/fields/QBO_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>QBO_Doc_Number__c</fullName>
    <label>Doc Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>