testoldcopy/force-app/main/default/objects/QBO_Invoice__c/fields/QBO_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>QBO_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>