testoldcopy/force-app/main/default/objects/QBO_Invoice__c/fields/Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Due__c</fullName>
    <formula>Total_Amount__c- Total_Payment_Recieved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>